feat: Added positive to negative ratios

--- a/sentiment-network/Sentiment_Classification_Projects.ipynb
+++ b/sentiment-network/Sentiment_Classification_Projects.ipynb
@@ -2344,17 +2344,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 25,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Create Counter object to store positive/negative ratios\n",
     "pos_neg_ratios = Counter()\n",
     "\n",
     "# TODO: Calculate the ratios of positive and negative uses of the most common words\n",
-    "#       Consider words to be \"common\" if they've been used at least 100 times"
+    "for string, num in total_counts.most_common():\n",
+    "    #       Consider words to be \"common\" if they've been used at least 100 times\n",
+    "    if num >= 100:\n",
+    "        pos_neg_ratios[string] = positive_counts[string] / (negative_counts[string] + 1)\n"
    ]
   },
   {
@@ -2366,11 +2367,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pos-to-neg ratio for 'the' = 1.0608543974539446\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'float' object has no attribute '1f'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-27-9b4bdb03cac9>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Pos-to-neg ratio for 'the' = {}\"\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpos_neg_ratios\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"the\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Pos-to-neg ratio for 'amazing' = {.1f}\"\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpos_neg_ratios\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"amazing\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Pos-to-neg ratio for 'terrible' = {}\"\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpos_neg_ratios\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"terrible\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'float' object has no attribute '1f'"
+     ]
+    }
+   ],
    "source": [
     "print(\"Pos-to-neg ratio for 'the' = {}\".format(pos_neg_ratios[\"the\"]))\n",
     "print(\"Pos-to-neg ratio for 'amazing' = {}\".format(pos_neg_ratios[\"amazing\"]))\n",
