feat: Converted ratios to log values
- So we can have positive and negative values around zero
- Used np.log()

--- a/sentiment-network/Sentiment_Classification_Projects.ipynb
+++ b/sentiment-network/Sentiment_Classification_Projects.ipynb
@@ -2367,25 +2367,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Pos-to-neg ratio for 'the' = 1.0608543974539446\n"
-     ]
-    },
-    {
-     "ename": "AttributeError",
-     "evalue": "'float' object has no attribute '1f'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-27-9b4bdb03cac9>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Pos-to-neg ratio for 'the' = {}\"\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpos_neg_ratios\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"the\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Pos-to-neg ratio for 'amazing' = {.1f}\"\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpos_neg_ratios\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"amazing\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Pos-to-neg ratio for 'terrible' = {}\"\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpos_neg_ratios\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"terrible\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'float' object has no attribute '1f'"
+      "Pos-to-neg ratio for 'the' = 1.0608543974539446\n",
+      "Pos-to-neg ratio for 'amazing' = 4.022813688212928\n",
+      "Pos-to-neg ratio for 'terrible' = 0.17744252873563218\n"
      ]
     }
    ],
@@ -2419,13 +2410,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 30,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: Convert ratios to logs"
+    "# TODO: Convert ratios to logs\n",
+    "for s, n in pos_neg_ratios.most_common():\n",
+    "    pos_neg_ratios[s] = np.log(n)"
    ]
   },
   {
@@ -2437,11 +2428,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pos-to-neg ratio for 'the' = 0.05907461878585907\n",
+      "Pos-to-neg ratio for 'amazing' = 1.3919815802404802\n",
+      "Pos-to-neg ratio for 'terrible' = -1.7291085042663878\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Pos-to-neg ratio for 'the' = {}\".format(pos_neg_ratios[\"the\"]))\n",
     "print(\"Pos-to-neg ratio for 'amazing' = {}\".format(pos_neg_ratios[\"amazing\"]))\n",
