feat: Completed tv-script through first check-point.

--- a/tv-script-generation/dlnd_tv_script_generation.ipynb
+++ b/tv-script-generation/dlnd_tv_script_generation.ipynb
@@ -130,7 +130,6 @@
     "    :param text: The text of tv scripts split into words\n",
     "    :return: A tuple of dicts (vocab_to_int, int_to_vocab)\n",
     "    \"\"\"\n",
-    "    # TODO: Implement Function\n",
     "    vocab = sorted(set(text))\n",
     "    vocab_to_int = {word: i for i, word in enumerate(vocab)}\n",
     "    int_to_vocab = dict(enumerate(vocab))\n",
@@ -167,17 +166,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
     "def token_lookup():\n",
     "    \"\"\"\n",
     "    Generate a dict to turn punctuation into a token.\n",
     "    :return: Tokenize dictionary where the key is the punctuation and the value is the token\n",
     "    \"\"\"\n",
-    "    # TODO: Implement Function\n",
-    "    return None\n",
+    "    tokens = {'.': \"||period||\", ',': \"||comma||\",\n",
+    "             ';': \"||semicolon||\", '\"': \"||quotation_mark||\",\n",
+    "             '!': \"||exclamation_mark||\", '?': \"||question_mark||\",\n",
+    "             '(': \"||left_parentheses||\", ')': \"||right_paratheses||\",\n",
+    "             \"--\": \"||dash||\", \"\\n\": \"||return||\"}\n",
+    "    return tokens\n",
     "\n",
     "\"\"\"\n",
     "DON'T MODIFY ANYTHING IN THIS CELL THAT IS BELOW THIS LINE\n",
@@ -195,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
