chore: Reformatted GANs.

--- a/gan_mnist/Intro_to_GANs_Exercises.ipynb
+++ b/gan_mnist/Intro_to_GANs_Exercises.ipynb
@@ -144,7 +144,7 @@
     "        -------\n",
     "        out: \n",
     "    '''\n",
-    "    with tf.variable_scope # finish this\n",
+    "    with tf.variable_scope(\"gen\", reuse=False) # finish this\n",
     "        # Hidden layer\n",
     "        h1 = \n",
     "        # Leaky ReLU\n",
