--- a/reinforcement/Q-learning-cart.ipynb
+++ b/reinforcement/Q-learning-cart.ipynb
@@ -35,14 +35,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[2017-04-13 12:20:53,011] Making new env: CartPole-v0\n"
+     "ename": "AttributeError",
+     "evalue": "module 'gym' has no attribute 'make'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-2-cb36783d542a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Create the Cart-Pole game environment\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0menv\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mgym\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmake\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'CartPole-v0'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m: module 'gym' has no attribute 'make'"
      ]
     }
    ],
@@ -63,7 +67,9 @@
   {
    "cell_type": "code",
    "execution_count": 152,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "env.reset()\n",
@@ -148,7 +154,9 @@
   {
    "cell_type": "code",
    "execution_count": 153,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "class QNetwork:\n",
@@ -265,7 +273,9 @@
   {
    "cell_type": "code",
    "execution_count": 174,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "train_episodes = 1000          # max number of episodes to learn from\n",
@@ -311,7 +321,9 @@
   {
    "cell_type": "code",
    "execution_count": 179,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Initialize the simulation\n",
@@ -358,7 +370,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Now train with experiences\n",
@@ -590,7 +604,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
