--- a/sentiment-rnn/Sentiment_RNN.ipynb
+++ b/sentiment-rnn/Sentiment_RNN.ipynb
@@ -329,7 +329,7 @@
    "outputs": [],
    "source": [
     "# Filter out that review with 0 length\n",
-    "reviews_ints = "
+    "reviews_ints = filter(reviews_ints, lambda x: x == 0)"
    ]
   },
   {
