feat: Updated vocab and dictionaries in Project 3.

--- a/sentiment-network/Sentiment_Classification_Projects.ipynb
+++ b/sentiment-network/Sentiment_Classification_Projects.ipynb
@@ -5043,7 +5043,7 @@
     "\n",
     "    def pre_process_data(self, reviews, labels):\n",
     "        \n",
-    "        review_vocab = set()\n",
+    "        review_vocab = set(review.split(' ') for review in reveiws)\n",
     "        # TODO: populate review_vocab with all of the words in the given reviews\n",
     "        #       Remember to split reviews into individual words \n",
     "        #       using \"split(' ')\" instead of \"split()\".\n",
@@ -5051,7 +5051,7 @@
     "        # Convert the vocabulary set to a list so we can access words via indices\n",
     "        self.review_vocab = list(review_vocab)\n",
     "        \n",
-    "        label_vocab = set()\n",
+    "        label_vocab = set(label for label in labels)\n",
     "        # TODO: populate label_vocab with all of the words in the given labels.\n",
     "        #       There is no need to split the labels because each one is a single word.\n",
     "        \n",
@@ -5063,12 +5063,12 @@
     "        self.label_vocab_size = len(self.label_vocab)\n",
     "        \n",
     "        # Create a dictionary of words in the vocabulary mapped to index positions\n",
-    "        self.word2index = {}\n",
+    "        self.word2index = {w: i for i, w in enumerate(self.review_vocab)}\n",
     "        # TODO: populate self.word2index with indices for all the words in self.review_vocab\n",
     "        #       like you saw earlier in the notebook\n",
     "        \n",
     "        # Create a dictionary of labels mapped to index positions\n",
-    "        self.label2index = {}\n",
+    "        self.label2index = {l: i for i, l in enumerate(self.label_vocab)}\n",
     "        # TODO: do the same thing you did for self.word2index and self.review_vocab, \n",
     "        #       but for self.label2index and self.label_vocab instead\n",
     "         \n",
