feat: Completed build_inputs() in Anna exercises.

--- a/intro-to-rnns/Anna_KaRNNa_Exercises.ipynb
+++ b/intro-to-rnns/Anna_KaRNNa_Exercises.ipynb
@@ -331,11 +331,11 @@
     "        \n",
     "    '''\n",
     "    # Declare placeholders we'll feed into the graph\n",
-    "    inputs = \n",
-    "    targets = \n",
+    "    inputs = tf.placeholder(tf.int32, [batch_size, num_steps], name='inputs')\n",
+    "    targets = tf.placeholder(tf.int32, [batch_size, num_steps], name='targets') \n",
     "    \n",
     "    # Keep probability placeholder for drop out layers\n",
-    "    keep_prob = \n",
+    "    keep_prob = tf.placeholder(tf.float32, name='keep_prob')\n",
     "    \n",
     "    return inputs, targets, keep_prob"
    ]
