--- a/intro-to-rnns/Anna_KaRNNa_Exercises.ipynb
+++ b/intro-to-rnns/Anna_KaRNNa_Exercises.ipynb
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -408,15 +408,18 @@
     "\n",
     "    '''\n",
     "    ### Build the LSTM Cell\n",
-    "    # Use a basic LSTM cell\n",
-    "    lstm = \n",
-    "    \n",
-    "    # Add dropout to the cell outputs\n",
-    "    drop = \n",
+    "   \n",
+    "    def build_cell(lstm_size, keep_prob):\n",
+    "        # Use a basic LSTM cell\n",
+    "        lstm = tf.contrib.rnn.BasicLSTMCell(lstm_size)\n",
+    "        \n",
+    "        # Add dropout to the cell\n",
+    "        drop = tf.contrib.rnn.DropoutWrapper(lstm, output_keep_prob=keep_prob)\n",
+    "        return drop\n",
     "    \n",
     "    # Stack up multiple LSTM layers, for deep learning\n",
-    "    cell = \n",
-    "    initial_state = \n",
+    "    cell = tf.contrib.rnn.MultiRNNCell([build_cell(lstm_size, keep_prob) for _ in range(num_layers)])\n",
+    "    initial_state = cell.zero_state(batch_size, tf.float32)\n",
     "    \n",
     "    return cell, initial_state"
    ]
