feat: completed build_output().

--- a/intro-to-rnns/Anna_KaRNNa_Exercises.ipynb
+++ b/intro-to-rnns/Anna_KaRNNa_Exercises.ipynb
@@ -390,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -443,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -463,22 +463,22 @@
     "\n",
     "    # Reshape output so it's a bunch of rows, one row for each step for each sequence.\n",
     "    # Concatenate lstm_output over axis 1 (the columns)\n",
-    "    seq_output = \n",
-    "    # Reshape seq_output to a 2D tensor with lstm_size columns\n",
-    "    x = \n",
+    "    # Reshape output so it's a bunch of rows, one row for each step for each sequence.\n",
+    "    # That is, the shape should be batch_size*num_steps rows by lstm_size columns\n",
+    "    seq_output = tf.concat(lstm_output, axis=1)\n",
+    "    x = tf.reshape(seq_output, [-1, in_size])\n",
     "    \n",
     "    # Connect the RNN outputs to a softmax layer\n",
     "    with tf.variable_scope('softmax'):\n",
-    "        # Create the weight and bias variables here\n",
-    "        softmax_w = \n",
-    "        softmax_b = \n",
+    "        softmax_w = tf.Variable(tf.truncated_normal((in_size, out_size), stddev=0.1))\n",
+    "        softmax_b = tf.Variable(tf.zeros(out_size))\n",
     "    \n",
     "    # Since output is a bunch of rows of RNN cell outputs, logits will be a bunch\n",
     "    # of rows of logit outputs, one for each step and sequence\n",
-    "    logits = \n",
+    "    logits = tf.matmul(x, softmax_w) + softmax_b\n",
     "    \n",
     "    # Use softmax to get the probabilities for predicted characters\n",
-    "    out = \n",
+    "    out = tf.nn.softmax(logits, name='predictions')\n",
     "    \n",
     "    return out, logits"
    ]
