feat: completed build_loss().

--- a/intro-to-rnns/Anna_KaRNNa_Exercises.ipynb
+++ b/intro-to-rnns/Anna_KaRNNa_Exercises.ipynb
@@ -517,12 +517,13 @@
     "    '''\n",
     "    \n",
     "    # One-hot encode targets and reshape to match logits, one row per sequence per step\n",
-    "    y_one_hot = \n",
-    "    y_reshaped =  \n",
+    "    # One-hot encode targets and reshape to match logits, one row per batch_size per step\n",
+    "    y_one_hot = tf.one_hot(targets, num_classes)\n",
+    "    y_reshaped = tf.reshape(y_one_hot, logits.get_shape())\n",
     "    \n",
     "    # Softmax cross entropy loss\n",
-    "    loss = \n",
-    "    \n",
+    "    loss = tf.nn.softmax_cross_entropy_with_logits(logits=logits, labels=y_reshaped)\n",
+    "    loss = tf.reduce_mean(loss)\n",
     "    return loss"
    ]
   },
