--- a/intro-to-rnns/Anna_KaRNNa_Exercises.ipynb
+++ b/intro-to-rnns/Anna_KaRNNa_Exercises.ipynb
@@ -463,8 +463,6 @@
     "\n",
     "    # Reshape output so it's a bunch of rows, one row for each step for each sequence.\n",
     "    # Concatenate lstm_output over axis 1 (the columns)\n",
-    "    # Reshape output so it's a bunch of rows, one row for each step for each sequence.\n",
-    "    # That is, the shape should be batch_size*num_steps rows by lstm_size columns\n",
     "    seq_output = tf.concat(lstm_output, axis=1)\n",
     "    x = tf.reshape(seq_output, [-1, in_size])\n",
     "    \n",
@@ -498,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -538,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -597,25 +595,25 @@
     "        tf.reset_default_graph()\n",
     "        \n",
     "        # Build the input placeholder tensors\n",
-    "        self.inputs, self.targets, self.keep_prob = \n",
+    "        self.inputs, self.targets, self.keep_prob = build_inputs(batch_size, num_steps)\n",
     "\n",
     "        # Build the LSTM cell\n",
-    "        cell, self.initial_state = \n",
+    "        cell, self.initial_state = build_lstm(lstm_size, num_layers, batch_size, self.keep_prob)\n",
     "\n",
     "        ### Run the data through the RNN layers\n",
     "        # First, one-hot encode the input tokens\n",
-    "        x_one_hot = \n",
+    "        x_one_hot = tf.one_hot(self.inputs, num_classes)\n",
     "        \n",
     "        # Run each sequence step through the RNN with tf.nn.dynamic_rnn \n",
-    "        outputs, state =\n",
+    "        outputs, state = tf.nn.dynamic_rnn(cell, x_one_hot, initial_state=self.initial_state)\n",
     "        self.final_state = state\n",
     "        \n",
     "        # Get softmax predictions and logits\n",
-    "        self.prediction, self.logits = \n",
+    "        self.prediction, self.logits = build_output(outputs, lstm_size, num_classes)\n",
     "        \n",
     "        # Loss and optimizer (with gradient clipping)\n",
-    "        self.loss =  \n",
-    "        self.optimizer = "
+    "        self.loss = build_loss(self.logits, self.targets, lstm_size, num_classes) \n",
+    "        self.optimizer = build_optimizer(self.loss, learning_rate, grad_clip)"
    ]
   },
   {
