feat: Completed Subsampling section in Skip-Gram_word2vec.

--- a/embeddings/Skip-Gram_word2vec.ipynb
+++ b/embeddings/Skip-Gram_word2vec.ipynb
@@ -80,15 +80,7 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Text8 Dataset: 31.4MB [00:19, 1.60MB/s]                            \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from urllib.request import urlretrieve\n",
     "from os.path import isfile, isdir\n",
@@ -212,8 +204,15 @@
    },
    "outputs": [],
    "source": [
-    "## Your code here\n",
-    "train_words = # The final subsampled word list"
+    "from collections import Counter\n",
+    "import random\n",
+    "\n",
+    "threshold = 1e-5\n",
+    "word_counts = Counter(int_words)\n",
+    "total_count = len(int_words)\n",
+    "freqs = {word: count / total_count for word, count in word_counts.items()}\n",
+    "p_drop = {word: 1 - np.sqrt(threshold/freqs[word]) for word in word_counts}\n",
+    "train_words = [word for word in int_words if random.random() < (1 - p_drop[word])]"
    ]
   },
   {
