feat: Completed through embeddings.

--- a/embeddings/Skip-Gram_word2vec.ipynb
+++ b/embeddings/Skip-Gram_word2vec.ipynb
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -246,9 +246,12 @@
     "def get_target(words, idx, window_size=5):\n",
     "    ''' Get a list of words in a window around an index. '''\n",
     "    \n",
-    "    # Your code here\n",
+    "    R = random.randint(1, window_size + 1)\n",
+    "    start = idx - R if (idx - R) > 0 else 0\n",
+    "    stop = idx + R\n",
+    "    target_words = set(words[start:idx] - words[idx + 1: stop + 1])\n",
     "    \n",
-    "    return"
+    "    return target_words"
    ]
   },
   {
@@ -260,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -306,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -314,8 +317,8 @@
    "source": [
     "train_graph = tf.Graph()\n",
     "with train_graph.as_default():\n",
-    "    inputs = \n",
-    "    labels = "
+    "    inputs = tf.placeholder(tf.int32, [None], name='inputs')\n",
+    "    labels = tf.placeholder(tf.int32, [None, None], name='labels')"
    ]
   },
   {
@@ -347,10 +350,10 @@
    "outputs": [],
    "source": [
     "n_vocab = len(int_to_vocab)\n",
-    "n_embedding =  # Number of embedding features \n",
+    "n_embedding = 200 # Number of embedding features \n",
     "with train_graph.as_default():\n",
-    "    embedding = # create embedding weight matrix here\n",
-    "    embed = # use tf.nn.embedding_lookup to get the hidden layer output"
+    "    embedding = tf.Variable(tf.random_uniform((n_vocab, n_embedding), -1, 1)) # create embedding weight matrix here\n",
+    "    embed = tf.nn.embedding_lookup() # use tf.nn.embedding_lookup to get the hidden layer output"
    ]
   },
   {
