--- a/embeddings/Skip-Gram_word2vec.ipynb
+++ b/embeddings/Skip-Gram_word2vec.ipynb
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -353,7 +353,7 @@
     "n_embedding = 200 # Number of embedding features \n",
     "with train_graph.as_default():\n",
     "    embedding = tf.Variable(tf.random_uniform((n_vocab, n_embedding), -1, 1)) # create embedding weight matrix here\n",
-    "    embed = tf.nn.embedding_lookup() # use tf.nn.embedding_lookup to get the hidden layer output"
+    "    embed = tf.nn.embedding_lookup(embedding, inputs) # use tf.nn.embedding_lookup to get the hidden layer output"
    ]
   },
   {
@@ -375,20 +375,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 12,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Number of negative labels to sample\n",
     "n_sampled = 100\n",
     "with train_graph.as_default():\n",
-    "    softmax_w = # create softmax weight matrix here\n",
-    "    softmax_b = # create softmax biases here\n",
+    "    softmax_w = tf.Variable(tf.truncated_normal((n_vocab, n_embedding), stddev=0.1))# create softmax weight matrix here\n",
+    "    softmax_b = tf.Variable(tf.zeros(n_vocab))# create softmax biases here\n",
     "    \n",
     "    # Calculate the loss using negative sampling\n",
-    "    loss = tf.nn.sampled_softmax_loss \n",
+    "    loss = tf.nn.sampled_softmax_loss(softmax_w, softmax_b, labels, embed, n_sampled, n_vocab) \n",
     "    \n",
     "    cost = tf.reduce_mean(loss)\n",
     "    optimizer = tf.train.AdamOptimizer().minimize(cost)"
@@ -405,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -431,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -458,7 +456,7 @@
    },
    "outputs": [],
    "source": [
-    "epochs = 10\n",
+    "epochs = 3\n",
     "batch_size = 1000\n",
     "window_size = 10\n",
     "\n",
