fix: got get_targets() working.

--- a/embeddings/Skip-Gram_word2vec.ipynb
+++ b/embeddings/Skip-Gram_word2vec.ipynb
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "metadata": {
     "collapsed": true
    },
@@ -249,9 +249,9 @@
     "    R = random.randint(1, window_size + 1)\n",
     "    start = idx - R if (idx - R) > 0 else 0\n",
     "    stop = idx + R\n",
-    "    target_words = set(words[start:idx] - words[idx + 1: stop + 1])\n",
+    "    target_words = set(words[start:idx] + words[idx + 1: stop + 1])\n",
     "    \n",
-    "    return target_words"
+    "    return list(target_words)"
    ]
   },
   {
@@ -451,9 +451,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "epochs = 3\n",
