feat: Completed through problem 2 in intro_to_tensorflow.ipynb.

--- a/intro-to-tensorflow/intro_to_tensorflow.ipynb
+++ b/intro-to-tensorflow/intro_to_tensorflow.ipynb
@@ -63,11 +63,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading notMNIST_train.zip...\n",
+      "Download Finished\n",
+      "Downloading notMNIST_test.zip...\n",
+      "Download Finished\n",
+      "All files downloaded.\n"
+     ]
+    }
+   ],
    "source": [
     "def download(url, file):\n",
     "    \"\"\"\n",
@@ -96,11 +106,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 210001/210001 [01:53<00:00, 1843.12files/s]\n",
+      "100%|██████████| 10001/10001 [00:07<00:00, 1295.23files/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "All features and labels uncompressed.\n"
+     ]
+    }
+   ],
    "source": [
     "def uncompress_features_labels(file):\n",
     "    \"\"\"\n",
@@ -170,18 +194,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'is_features_normal' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-2-613706970a89>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     22\u001b[0m      0.896862745098, 0.9])\n\u001b[1;32m     23\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 24\u001b[0;31m \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mis_features_normal\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     25\u001b[0m     \u001b[0mtrain_features\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnormalize_grayscale\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrain_features\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     26\u001b[0m     \u001b[0mtest_features\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnormalize_grayscale\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtest_features\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'is_features_normal' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed!\n"
      ]
     }
    ],
@@ -219,11 +239,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Labels One-Hot Encoded\n"
+     ]
+    }
+   ],
    "source": [
     "if not is_labels_encod:\n",
     "    # Turn labels into numbers and apply One-Hot Encoding\n",
@@ -242,11 +268,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training features and labels randomized and split.\n"
+     ]
+    }
+   ],
    "source": [
     "assert is_features_normal, 'You skipped the step to normalize the features'\n",
     "assert is_labels_encod, 'You skipped the step to One-Hot Encode the labels'\n",
@@ -263,11 +295,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data cached in pickle file.\n"
+     ]
+    }
+   ],
    "source": [
     "# Save the data for easy access\n",
     "pickle_file = 'notMNIST.pickle'\n",
@@ -302,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -370,11 +408,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed!\n"
+     ]
+    }
+   ],
    "source": [
     "# All the pixels in the image (28 * 28 = 784)\n",
     "features_count = 784\n",
@@ -382,12 +426,12 @@
     "labels_count = 10\n",
     "\n",
     "# TODO: Set the features and labels tensors\n",
-    "# features = \n",
-    "# labels = \n",
+    "features = tf.placeholder(tf.float32)\n",
+    "labels = tf.placeholder(tf.float32)\n",
     "\n",
     "# TODO: Set the weights and biases tensors\n",
-    "# weights = \n",
-    "# biases = \n",
+    "weights = tf.Variable(tf.truncated_normal((features_count, labels_count)))\n",
+    "biases = tf.Variable(tf.zeros(labels_count))\n",
     "\n",
     "\n",
     "\n",
@@ -447,11 +491,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy function created.\n"
+     ]
+    }
+   ],
    "source": [
     "# Determine if the predictions are correct\n",
     "is_correct_prediction = tf.equal(tf.argmax(prediction, 1), tf.argmax(labels, 1))\n",
