--- a/autoencoder/Convolutional_Autoencoder.ipynb
+++ b/autoencoder/Convolutional_Autoencoder.ipynb
@@ -871,10 +871,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 17,
+   "metadata": {},
    "outputs": [],
    "source": [
     "learning_rate = 0.001\n",
@@ -884,11 +882,11 @@
     "### Encoder\n",
     "conv1 = tf.layers.conv2d(inputs_, 32, (3,3), padding='same', activation=tf.nn.relu)\n",
     "# Now 28x28x32\n",
-    "maxpool1 = tf.layers.max_pooling2d(conv1, padding='same')\n",
+    "maxpool1 = tf.layers.max_pooling2d(conv1, (2,2), (2,2), padding='same')\n",
     "# Now 14x14x32\n",
     "conv2 = tf.layers.conv2d(maxpool1, 32, (3,3), padding='same', activation=tf.nn.relu)\n",
     "# Now 14x14x32\n",
-    "maxpool2 = tf.layers.max_pooling2d(conv2, padding='same')\n",
+    "maxpool2 = tf.layers.max_pooling2d(conv2, (2,2), (2,2), padding='same')\n",
     "# Now 7x7x32\n",
     "conv3 = tf.layers.conv2d(maxpool2, 16, (3,3), padding='same', activation=tf.nn.relu)\n",
     "# Now 7x7x16\n",
@@ -896,27 +894,27 @@
     "# Now 4x4x16\n",
     "\n",
     "### Decoder\n",
-    "upsample1 = tf.layers.conv2d\n",
+    "upsample1 = tf.image.resize_nearest_neighbor(encoded, (7,7))\n",
     "# Now 7x7x16\n",
-    "conv4 = \n",
+    "conv4 = tf.layers.conv2d(upsample1, 16, (3,3), padding='same', activation=tf.nn.relu)\n",
     "# Now 7x7x16\n",
-    "upsample2 = \n",
+    "upsample2 = tf.image.resize_nearest_neighbor(conv4, (14,14))\n",
     "# Now 14x14x16\n",
-    "conv5 = \n",
+    "conv5 = tf.layers.conv2d(upsample2, 32, (3,3), padding='same', activation=tf.nn.relu)\n",
     "# Now 14x14x32\n",
-    "upsample3 = \n",
+    "upsample3 = tf.image.resize_nearest_neighbor(conv5, (28,28))\n",
     "# Now 28x28x32\n",
-    "conv6 = \n",
+    "conv6 = tf.layers.conv2d(upsample3, 32, (3,3), padding='same', activation=tf.nn.relu)\n",
     "# Now 28x28x32\n",
     "\n",
-    "logits = \n",
+    "logits = tf.layers.conv2d(conv6, 1, (3,3), padding='same', activation=None)\n",
     "#Now 28x28x1\n",
     "\n",
     "# Pass logits through sigmoid to get reconstructed image\n",
-    "decoded =\n",
+    "decoded = tf.nn.sigmoid(logits, name='decoded')\n",
     "\n",
     "# Pass logits through sigmoid and calculate the cross-entropy loss\n",
-    "loss = \n",
+    "loss = tf.nn.sigmoid_cross_entropy_with_logits(labels=targets_, logits=logits)\n",
     "\n",
     "# Get cost and define the optimizer\n",
     "cost = tf.reduce_mean(loss)\n",
@@ -925,7 +923,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 18,
    "metadata": {
     "collapsed": true
    },
@@ -937,10 +935,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch: 1/100... Training loss: 0.6963\n",
+      "Epoch: 1/100... Training loss: 0.6886\n"
+     ]
+    }
+   ],
    "source": [
     "epochs = 100\n",
     "batch_size = 200\n",
