--- a/transfer-learning/Transfer_Learning.ipynb
+++ b/transfer-learning/Transfer_Learning.ipynb
@@ -27,10 +27,10 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "VGG16 Parameters: 553MB [01:35, 5.20MB/s]                              \n"
+      "Parameter file already exists!\n"
      ]
     }
    ],
@@ -75,15 +75,7 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Flowers Dataset: 229MB [00:36, 6.27MB/s]                              \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import tarfile\n",
     "\n",
@@ -207,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
@@ -219,7 +211,7 @@
       "/Users/tomdunlap/projects/udacity/deep/deep-learning/transfer-learning/tensorflow_vgg/vgg16.npy\n",
       "npy file loaded\n",
       "build model started\n",
-      "build model finished: 2s\n",
+      "build model finished: 1s\n",
       "Starting daisy images\n",
       "10 images processed\n",
       "20 images processed\n",
@@ -529,71 +521,7 @@
       "130 images processed\n",
       "140 images processed\n",
       "150 images processed\n",
-      "160 images processed\n",
-      "170 images processed\n",
-      "180 images processed\n",
-      "190 images processed\n",
-      "200 images processed\n",
-      "210 images processed\n",
-      "220 images processed\n",
-      "230 images processed\n",
-      "240 images processed\n",
-      "250 images processed\n",
-      "260 images processed\n",
-      "270 images processed\n",
-      "280 images processed\n",
-      "290 images processed\n",
-      "300 images processed\n",
-      "310 images processed\n",
-      "320 images processed\n",
-      "330 images processed\n",
-      "340 images processed\n",
-      "350 images processed\n",
-      "360 images processed\n",
-      "370 images processed\n",
-      "380 images processed\n",
-      "390 images processed\n",
-      "400 images processed\n",
-      "410 images processed\n",
-      "420 images processed\n",
-      "430 images processed\n",
-      "440 images processed\n",
-      "450 images processed\n",
-      "460 images processed\n",
-      "470 images processed\n",
-      "480 images processed\n",
-      "490 images processed\n",
-      "500 images processed\n",
-      "510 images processed\n",
-      "520 images processed\n",
-      "530 images processed\n",
-      "540 images processed\n",
-      "550 images processed\n",
-      "560 images processed\n",
-      "570 images processed\n",
-      "580 images processed\n",
-      "590 images processed\n",
-      "600 images processed\n",
-      "610 images processed\n",
-      "620 images processed\n",
-      "630 images processed\n",
-      "640 images processed\n",
-      "650 images processed\n",
-      "660 images processed\n",
-      "670 images processed\n",
-      "680 images processed\n",
-      "690 images processed\n",
-      "700 images processed\n",
-      "710 images processed\n",
-      "720 images processed\n",
-      "730 images processed\n",
-      "740 images processed\n",
-      "750 images processed\n",
-      "760 images processed\n",
-      "770 images processed\n",
-      "780 images processed\n",
-      "790 images processed\n",
-      "799 images processed\n"
+      "160 images processed\n"
      ]
     }
    ],
@@ -711,7 +639,11 @@
    },
    "outputs": [],
    "source": [
-    "labels_vecs = # Your one-hot encoded labels array here"
+    "from sklearn.preprocessing import LabelBinarizer\n",
+    "\n",
+    "lb = LabelBinarizer()\n",
+    "lb.fit(labels)\n",
+    "labels_vecs = lb.transform(labels)"
    ]
   },
   {
@@ -742,6 +674,12 @@
    },
    "outputs": [],
    "source": [
+    "from sklearn.model_selection import StratifiedShuffleSplit\n",
+    "\n",
+    "ss = StratifiedShuffleSplit(n_splits=3, test_size=0.2)\n",
+    "splitter = ss.split()\n",
+    "\n",
+    "\n",
     "train_x, train_y = \n",
     "val_x, val_y = \n",
     "test_x, test_y =  "
